maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: ';' expected but '=' found.
  (x, y) = Biscuit();
         ^